--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,9 @@ version '1.0'
 apply plugin: 'java'
 apply plugin: 'license'
 apply plugin: 'maven'
+apply plugin: 'signing'
 
-defaultTasks 'licenseFormat', 'build', 'jar', 'uploadArchives'
+defaultTasks 'licenseFormat', 'build', 'jar'
 
 sourceCompatibility = 1.8
 
@@ -25,6 +26,7 @@ sourceSets {
     }
 }
 
+// Tasks
 jar {
     from "LICENSE"
 
@@ -34,23 +36,31 @@ jar {
     }
 }
 
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
+
+signing {
+    sign configurations.archives
+}
+
 repositories {
     mavenCentral()
 }
 
-dependencies {
-}
-
 test {
     systemProperties 'property': 'value'
-}
-
-uploadArchives {
-    repositories {
-        flatDir {
-            dirs 'repos'
-        }
-    }
 }
 
 license {
