--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,20 @@ plugins {
 }
 
 group 'com.github.jonathanxd'
-version '1.0'
+version '1.1'
 
 
-apply plugin: 'java'
-apply plugin: 'license'
-apply plugin: 'maven'
-apply plugin: 'signing'
+allprojects {
+    apply plugin: "idea"
+    apply plugin: 'java'
+    apply plugin: 'license'
+    apply plugin: 'maven'
+    apply plugin: 'signing'
+
+    license {
+        header rootProject.file("LICENSE_HEADER")
+    }
+}
 //Sonatype upload
 //apply from: 'upload.gradle'
 
@@ -65,17 +72,33 @@ signing {
     sign configurations.archives
 }
 
-dependencies {
-    testCompile group: 'junit', name:'junit', version: '4.11'
+project(':TextLexerShow') {
+    dependencies {
+        compile rootProject
+        compile group: 'org.tinyjee.jgraphx', name: 'jgraphx', version: '3.4.1.3'
+        testCompile rootProject.sourceSets.test.output
+
+    }
 }
 
-repositories {
-    mavenCentral()
+allprojects{
+    dependencies {
+        testCompile group: 'junit', name:'junit', version: '4.11'
+    }
 }
 
-test {
-    useJUnit()
+allprojects{
+    repositories {
+        mavenCentral()
+    }
 }
+
+allprojects {
+    test {
+        useJUnit()
+    }
+}
+
 
 license {
     ext.name = 'TextLexer'
@@ -91,7 +114,7 @@ license {
     exclude "src/main/resources/**"
     exclude "src/test/resources/**"
     
-    header file('LICENSE_HEADER')
+    header rootProject.file('LICENSE_HEADER')
     
     sourceSets = project.sourceSets
     
