--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group 'com.github.jonathanxd'
-version '1.1'
+version '1.3-pre'
 
 
 allprojects {
@@ -18,7 +18,7 @@ allprojects {
     }
 }
 //Sonatype upload
-//apply from: 'upload.gradle'
+apply from: 'upload.gradle'
 
 defaultTasks 'licenseFormat', 'build', 'test', 'jar'
 
@@ -72,11 +72,16 @@ signing {
     sign configurations.archives
 }
 
-project(':TextLexerShow') {
+subprojects {
     dependencies {
         compile rootProject
-        compile group: 'org.tinyjee.jgraphx', name: 'jgraphx', version: '3.4.1.3'
         testCompile rootProject.sourceSets.test.output
+    }
+}
+
+project(':TextLexerShow') {
+    dependencies {
+        compile group: 'org.tinyjee.jgraphx', name: 'jgraphx', version: '3.4.1.3'
 
     }
 }
