New VisitPhase: VISIT_END
Changes to new VisitPhase.

VISIT_END: In this phase all tokens are processed, methods that process this phase can have List<TokenHolder> instead of TokenHolder parameter of VisitPhase.VISIT and VisitPhase.EXIT. See TokenVisitor Test example.

 TokenVisitor updated to show an example of VISIT_END

--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'com.github.jonathanxd'
-version '1.6'
+version '1.7'
 
 
 allprojects {
@@ -20,7 +20,7 @@ allprojects {
     }
 }
 //Sonatype upload
-//apply from: 'upload.gradle'
+apply from: 'upload.gradle'
 
 defaultTasks 'licenseFormat', 'build', 'test', 'jar', 'shadowJar'
 
