--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'com.github.jonathanxd'
-version '1.8'
+version '1.9'
 
 
 allprojects {
@@ -110,6 +110,7 @@ project(':TextLexerShow') {
 allprojects{
     dependencies {
         compile 'com.github.JonathanxD:JwIUtils:1.2'
+        compile group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.0'
         testCompile group: 'junit', name:'junit', version: '4.11'
     }
 }
